# MyCMakeReferences

./: Readme.md
CMake_tutorial/: Readme.md
CMake_tutorial/Step1/: CMakeLists.txt  Readme.md  tutorial.cpp
CMake_tutorial/Step2/: CMakeLists.txt  Readme.md  tutorial.cpp
CMake_tutorial/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  mysqrt.cpp
CMake_tutorial/Step3/: CMakeLists.txt  Readme.md
CMake_tutorial/Step3/MathFunctions/: CMakeLists.txt
CMake_tutorial/Step4/: CMakeLists.txt  Readme.md
basic/: CMakeLists.txt  Readme.md
basic/src/: CMakeLists.txt  main.cpp
basic_binary/: CMakeLists.txt  Readme.md
basic_library/: CMakeLists.txt  Readme.md
basic_library/libs/libA/: CMakeLists.txt
basic_library/libs/libA/include/: libA.hpp
basic_library/libs/libA/src/: libA.cpp
basic_library/libs/libB/: CMakeLists.txt
basic_library/libs/libB/include/: libB.hpp
basic_library/libs/libB/src/: libB.cpp
basic_library/src/: CMakeLists.txt  main.cpp
out-of-tree/: Readme.md
out-of-tree/cur_project/: CMakeLists.txt  main.cpp
out-of-tree/out_project/: CMakeLists.txt  main.cpp
